# FeelMeObfscator

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: API-REFERENCE.md  BENCHMARKS.md
examples/: Android-example.cpp  advanced_usage.cpp  basic-usage.cpp
include/: FeelMeHappy.h
tests/: perfomance_tests.cpp  unit_tests.cpp
